--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,5 @@ a:active {
 
 img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: -25px;
+  margin: -25px auto 0;
 }
